src/optimpacklegacy.h

typedef OPL_INTEGER opl_integer_t;
typedef OPL_LOGICAL opl_logical_t;
/*---------------------------------------------------------------------------*/
/* STATUS AND ERROR REPORTING */

/**
 * Standard result codes
 *
 * @brief These constants are the standard value returned by most dynamic
 *        buffer routines.
 */
typedef enum {
  /* Success. */
  OPL_SUCCESS = 0,

  /* Warnings. */
  OPL_STP_EQ_STPMIN,
  OPL_STP_EQ_STPMAX,
  OPL_XTOL_TEST_SATISFIED,
  OPL_ROUNDING_ERROR,

  /* Errors. */
  OPL_STPMAX_LT_STPMIN,
  OPL_STPMIN_LT_ZERO,
  OPL_XTOL_LT_ZERO,
  OPL_FTOL_LE_ZERO,
  OPL_GTOL_LE_ZERO,
  OPL_NOT_A_DESCENT,
  OPL_STP_GT_STPMAX, /* OPL_OUT_OF_BOUNDS? */
  OPL_STP_LT_STPMIN, /* OPL_OUT_OF_BOUNDS? */
  OPL_F_LE_FMIN,
  OPL_NOT_POSITIVE_DEFINITE,
  OPL_INSUFFICIENT_MEMORY,
  OPL_ILLEGAL_ADDRESS,
  OPL_INVALID_ARGUMENT,
  OPL_OUT_OF_BOUNDS,
  OPL_CORRUPTED,
  OPL_OVERFLOW,
#if 0
  OPL_SYNTAX_ERROR,
  OPL_OPEN_ERROR,
  OPL_CLOSE_ERROR,
  OPL_READ_ERROR,
  OPL_WRITE_ERROR,
  OPL_STAT_ERROR,
  OPL_FILE_EXISTS,
  OPL_ZIP_ERROR,
#endif
  OPL_SYSTEM_ERROR   /* System error, use errno code. */
} opl_status_t;
/**
 * Query an explanation about a status code.
 *
 * @param status   Status value.
 *
 * @return A human readable message.
 */
extern const char* opl_get_default_message(opl_status_t status);
/*---------------------------------------------------------------------------*/
/* LINE SEARCH */

/**
 * @addtogroup MoreThuenteLineSearch
 * @{
 *
 * @page csrch Moré & Thuente line search
 * @tableofcontents
 *
 * Moré & Thuente line search method (@ref morethuente1984) finds a step that
 * satisfies a sufficient decrease condition and a curvature condition.
 *
 * The function @link #opl_csrch_start should be called at the start of a line
 * search to initiate the search.  The function @link #opl_csrch_iterate should
 * then be called for each new tried point along the line search until the
 * convergence of the search.
 *
 * The method updates an interval with endpoints `stx` and `sty`.  The
 * interval is initially chosen so that it contains a minimizer of the
 * modified function:
 *
 * ```
 * psi(stp) = f(stp) - f(0) - ftol*stp*g(0)
 * ````
 *
 * where `f(0)` and `g(0) = f'(0)` are the value of the function and its
 * derivative for `stp = 0`.  If `psi(stp) ≤ 0` and `g(stp) ≥ 0` for some step,
 * then the interval is chosen so that it contains a minimizer of `f(stp)`.
 * The algorithm is designed to find a step that satisfies the sufficient
 * decrease condition:
 *
 * ```
 * f(stp) <= f(0) + ftol*stp*g(0),                            (1)
 * ```
 *
 * and the curvature condition:
 *
 * ```
 * abs(g(stp)) <= gtol*abs(g(0)).                             (2)
 * ```
 *
 * Relations (1) and (2) are called the strong Wolfe conditions.  If `ftol` is
 * less than `gtol` and if, for example, the function is bounded below, then
 * there is always a step which satisfies both conditions.  If no step can be
 * found that satisfies both conditions, then the algorithm stops with a
 * warning.  In this case `stp` only satisfies the sufficient decrease
 * condition.
 *
 *
 * @subsection example Example
 *
 * A typical invocation of the method has the following outline:
 *
 * ```
 * opl_csrch_create_workspace();
 * double f = ...;   // function value for STP=0
 * double g = ...;   // derivative value for STP=0
 * double stp = ...; // guess for next STP value to try (STP > 0.0)
 * double ftol = 1e-3;
 * double gtol = 0.9;
 * double xtol = 0.1;
 * double stpmin = 0;
 * double stpmax = 1e20*stp;
 * opl_csrch_start(ws, f, g, stp, ftol, gtol, xtol, stpmin, stpmax);
 * for (;;) {
 *     opl_task_t task = opl_csrch_get_task(ws);
 *     if (task == OPL_TASK_FG) {
 *         // Evaluate the function and the gradient at `stp`.
 *         f = func(stp);
 *         g = grad(stp);
 *     } else if (task == OPL_TASK_CONV) {
 *         // Search has converged.
 *         break;
 *     } else if (task == OPL_TASK_WARN) {
 *         // Some problem prevents further progress.
 *         fprintf(stderr, "warning in %s\n", opl_csrch_get_reason(ws));
 *         exit(1);
 *     } else {
 *         // An error occured.
 *         fprintf(stderr, "error in %s\n", , opl_csrch_get_reason(ws));
 *         exit(1);
 *     }
 * }
 * ```
 *
 * @subsection refs References
 *
 * @anchor morethuente1984
 *     Jorge J. Moré and David J. Thuente, "Line search algorithms with
 *     guaranteed sufficient decrease" in ACM Transactions on Mathematical
 *     Software (TOMS) Volume 20, Issue 3, Pages 286-307 (September 1994).
 *
 *
 * @subsection hist History
 *
 * MINPACK-1 Project. June 1983.
 * Argonne National Laboratory.
 * Jorge J. Moré and David J. Thuente.
 *
 * MINPACK-2 Project. November 1993.
 * Argonne National Laboratory and University of Minnesota.
 * Brett M. Averick, Richard G. Carter, and Jorge J. Moré.
 *
 * Yorick translation an improvements.  October 2001.
 * C-version.  February 2003.
 * Observatoire de Lyon (France).
 * Éric Thiébaut.
 *
 * New C version with structured workspace.
 * December 2016.
 * Centre de Recherche Astrophysique de Lyon (France).
 * Éric Thiébaut.
 */

/**
 * Possible values for an optimization task.
 */
typedef enum {
  OPL_TASK_START     = 0, /*< start line search */
  OPL_TASK_FG        = 1, /*< caller has to compute function and gradient */
  OPL_TASK_FREEVARS  = 2, /*< caller has to determine the free variables */
  OPL_TASK_NEWX      = 3, /*< new variables available for inspection */
  OPL_TASK_CONV      = 4, /*< search has converged */
  OPL_TASK_WARN      = 5, /*< search aborted with warning */
  OPL_TASK_ERROR     = 6  /*< search aborted with error */
} opl_task_t;
/**
 * @}
 */

/*---------------------------------------------------------------------------*/

/**
 * @addtogroup VMLMB
 * @{
 *
 * VMLMB is a limited memory variable metric method (BFGS) which can take into
 * account bound constraints
 */

/**
 * The opaque workspace for VMLMB.
 */
typedef struct _opl_vmlmb_workspace opl_vmlmb_workspace_t;
/**
 * Return the size of a VMLMB workspace as one block.
 *
 * The returned size is a multiple of the size of a double precision floating
 * point value.  It may be stored in an array of such values.
 *
 * Typical usage:
 * <pre>
 *    size = opl_vmlmb_monolithic_workspace_size(n, m);
 *    buffer = malloc(size);
 *    ws = opl_vmlmb_monolithic_workspace_init(buffer, n, m);
 *    ....;
 *    free(buffer);
 * </pre>
 * As it is guaranteed that the base address does not change, you can also do:
 * </pre>
 *    size = opl_vmlmb_monolithic_workspace_size(n, m);
 *    ws = opl_vmlmb_monolithic_workspace_init(malloc(size), n, m);
 *    ....;
 *    free(ws);
 * <pre>
 *
 * @param n   The number of variables.
 *
 * @param m   The number of memorized steps.
 *
 * @return The size in bytes of a monolithic workspace for VMLMB.  Zero is
 *         returned if the arguments are invalid (not strictly positive).
 */
extern size_t
opl_vmlmb_monolithic_workspace_size(opl_integer_t n, opl_integer_t m);
/**
 * Initialize a workspace allocated as one block.
 *
 * @param buf   The memory allocated by the caller of the workspace, it must
 *              have at least the size given by
 *              `opl_vmlmb_monolithic_workspace_size(n, m)`.
 *
 * @param n     The number of variables.
 *
 * @param m     The number of memorized steps.
 *
 * @return The workspace initialized with defaults.  `NULL` is returned
 *         if `buf` is not a valid address.
 */
extern opl_vmlmb_workspace_t*
opl_vmlmb_monolithic_workspace_init(void* buf,
                                    opl_integer_t n, opl_integer_t m);
extern opl_vmlmb_workspace_t*
opl_vmlmb_set_defaults(opl_vmlmb_workspace_t* ws);
extern opl_vmlmb_workspace_t*
opl_vmlmb_create(opl_integer_t n, opl_integer_t m);
extern void
opl_vmlmb_destroy(opl_vmlmb_workspace_t* ws);
/*
 * VMLM-B computes a local minimizer of a function of N variables by a limited
 * memory variable metric (BFGS) method; optionally, the parameters may be
 * bounded.  The user must evaluate the function and the gradient.
 *
 * VMLM-B is implemented via two functions: opl_vmlmb_monolithic_workspace_init
 * for initialization and opl_vmlmb_iterate for further iterations.  These
 * functions use reverse communication.  The user must choose an initial
 * approximation X to the minimizer, evaluate the function and the gradient at
 * X, and make the initial call with TASK set to OPL_TASK_FG.  On exit TASK
 * indicates the required action.
 *
 * The arguments are:
 *
 *   N is the number of parameters.
 *
 *   M is the number of correction pairs to remember in order to compute the
 *       limited memory variable metric (BFGS) approximation of the inverse of
 *       the Hessian.  For large problems, M = 3 to 5 gives good results.  For
 *       small problems, M should be less or equal N.  The larger is M (and N)
 *       the more computer memory will be needed to store the workspace WS.
 *
 *   FRTOL is the relative error desired in the function (e.g.  FRTOL=1e-8).
 *       Convergence occurs if the estimate of the relative error between F(X)
 *       and F(XSOL), where XSOL is a local minimizer, is less or equal FRTOL.
 *       FRTOL must have a non-negative floating point value.
 *
 *   FATOL is the absolute error desired in the function (e.g. FATOL=0.0).
 *       Convergence occurs if the estimate of the absolute error between F(X)
 *       and F(XSOL), where XSOL is a local minimizer, is less or equal FATOL.
 *       FATOL must have a non-negative floating point value.
 *
 *   SFTOL, SGTOL, and SXTOL are tolerances for the line search subroutine (see
 *       opl_csrch).   Recommended  values: SFTOL=0.001,  SGTOL=0.9,  SXTOL=0.1
 *       (other values  may be more  suitable for highly  non-quadratic penalty
 *       function).
 *
 *   DELTA is a small nonegative value used to compute a small initial step.
 *
 *   EPSILON is a small value, in the range [0,1), equals to the cosine of the
 *       maximum angle between the search direction and the anti-gradient.  The
 *       BFGS recursion is restarted, whenever the search direction is not
 *       sufficiently "descending".
 *
 *   WS is a  workspace array of length equal to the value
 *       returned by opl_vmlmb_monolithic_workspace_size(N,M)
 *
 *   X is a double precision array of length N.  On entry, X is an
 *       approximation to the solution.  On exit with TASK = OPL_TASK_CONV, X
 *       is the current approximation.
 *
 *   F is the address of a double precision variable.  On entry, F is the value
 *       of the function at X.  On final exit, F is the function value at X.
 *
 *   G is a double precision array of length N.  On entry, G is the value of
 *       the gradient at X.  On final exit, G is the value of the gradient at
 *       X.
 *
 *   ISFREE is an optional integer array with length N provided by the caller
 *       if the values in X have bounds.  If the parameters have no bounds,
 *       ISFREE should be NULL (unconstrained minimization).  Otherwise,
 *       elements set to zero in ISFREE indicate that the corresponding values
 *       in X has reached a bound and should not be changed during the next
 *       step because the gradient has the wrong sign (i.e.  the steepest
 *       descent direction would violate the bound constraints):
 *
 *           ISFREE[i] = 0 if i-th value has a lower bound XLO[i]
 *                         and X[i] = XLO[i] and G[i] >= 0
 *                       0 if i-th value has an upper bound XHI[i]
 *                         and X[i] = XHI[i] and G[i] <= 0
 *                       1 otherwise
 *
 *       ISFREE needs only to be computed when TASK = OPL_TASK_FREEVARS.  If X
 *       has (some) bounds, the caller is responsible for applying the bounds
 *       to X before evaluating the function value F and the gradient G (i.e.,
 *       when TASK = OPL_TASK_FG), e.g.:
 *
 *           if (X[i] < XLO[i]) X[i] = XLO[i];
 *           if (X[i] > XHI[i]) X[i] = XHI[i];
 *
 *       If H is not specified (i.e., H is NULL) or if H[i] > 0 for all i such
 *       that ISFREE[i] is non-zero, then ISFREE is left unchanged.
 *
 *   H is an optional double precision array with length N provided by the
 *       caller and such that diag(H) is an approximation of the inverse of the
 *       Hessian matrix.  If H is NULL, then the inverse of the Hessian is
 *       approximated by a simple rescaling using Shanno & Phua formula.
 *       Otherwise, if ISFREE is NULL, all elements of H must be strictly
 *       greater than zero; else ISFREE[i] is set to zero if H[i] <= 0 (this is
 *       the only case where ISFREE is modified).  As for ISFREE, H needs only
 *       to be specifed the first time opl_vmlmb is called and when JOB=2.
 *
 *   TASK is the value returned opl_vmlmb_iterate.  It
 *       can have one of the following values:
 *
 *           OPL_TASK_FG - caller must evaluate the function and gradient at X
 *               and call opl_vmlm_next.
 *
 *           OPL_TASK_FREEVARS - if variables are bounded, caller must
 *               determine the set of free variables for the current variables
 *               X and update IFREE accordingly.
 *
 *           OPL_TASK_NEWX - a new iterate has been computed.  The
 *               approximation X, function F, and gradient G are available for
 *               examination.
 *
 *           OPL_TASK_CONV - the search is successful.  The solution, function
 *               value and gradient are available in X, F and G.
 *
 *           OPL_TASK_WARN - VMLMB is not able to satisfy the convergence
 *               conditions.  The exit value of X contains the best
 *               approximation found so far.  Warning message is given by
 *               opl_vmlmb_get_reason(ws).
 *
 *           OPL_TASK_ERROR then there is an error in the input arguments.
 *               Error message is given by opl_vmlmb_get_reason(ws).
 *
 * The caller must not modify the workspace array WS between calls to
 * opl_vmlmb_monolithic_workspace_init and further calls to opl_vmlmb_iterate.
 *
 * A typical invocation of VMLMB for unconstrained minimization has the
 * following outline:
 *
 *    // Choose a starting vector:
 *    for (i=0 ; i<n ; ++i) x[i] = ... ;
 *
 *    // Allocate and setup workspaces:
 *    size = opl_vmlmb_monolithic_workspace_size(n, m);
 *    buffer = malloc(size*sizeof(char));
 *    ws = opl_vmlmb_monolithic_workspace_init((char *)buffer, n, m);
 *
 *
 *    //Configure VMLMB instance
 *    # define SET_ATTRIBUTE(name, invalid)                       \
 *    {double value = name ;                                      \
 *    if ((invalid) ||                                            \
 *    opl_vmlmb_set_##name(ws, value) != OPL_SUCCESS) {           \
 *    mexErrMsgTxt("invalid value for `" #name "`");              \
 *    }}
 *    SET_ATTRIBUTE(fmin, FALSE);
 *    SET_ATTRIBUTE(fatol, value < 0);
 *    SET_ATTRIBUTE(frtol, value < 0);
 *    SET_ATTRIBUTE(sftol, value <= 0 || value >= 1);
 *    SET_ATTRIBUTE(sgtol, value <= 0 || value >= 1);
 *    SET_ATTRIBUTE(sxtol, value <= 0 || value >= 1);
 *    SET_ATTRIBUTE(delta, value < 0);
 *    SET_ATTRIBUTE(epsilon, value < 0);
 *    # undef SET_ATTRIBUTE
 *
 *    task = OPL_TASK_FG;
 *    for (;;) {
 *      if (task == OPL_TASK_FG) {
 *        f = ...;  // evaluate the function at X; store in F
 *        g = ...;  // evaluate the gradient of F at X; store in G
 *      } else if (task == OPL_TASK_NEWX) {
 *         // New successful step: the approximation X, function F, and
 *         // gradient G, are available for inspection.
 *      } else {
 *        // Convergence, or error, or warning
 *        fprintf(stderr, "%s\n", opl_vmlmb_get_reason(ws));
 *        break;
 *      }
 *      // Computes next step:
 *      task = opl_vmlmb_iterate(ws, x, &f, g, NULL, NULL);
 *    }
 *
 * A typical invocation of VMLMB for bound-constrained minimization has the
 * following outline:
 *
 *    // Choose a starting vector:
 *    for (i=0 ; i<n ; ++i) x[i] = ... ;
 *
 *    // Allocate and setup workspaces:
 *    size = opl_vmlmb_monolithic_workspace_size(n, m);
 *    buffer = malloc(size*sizeof(char));
 *    ws = opl_vmlmb_monolithic_workspace_init((char *)buffer, n, m);
 *
 *
 *    //Configure VMLMB instance
 *    # define SET_ATTRIBUTE(name, invalid)                       \
 *    {double value = name ;                                      \
 *    if ((invalid) ||                                            \
 *    opl_vmlmb_set_##name(ws, value) != OPL_SUCCESS) {           \
 *    mexErrMsgTxt("invalid value for `" #name "`");              \
 *    }}
 *    SET_ATTRIBUTE(fmin, FALSE);
 *    SET_ATTRIBUTE(fatol, value < 0);
 *    SET_ATTRIBUTE(frtol, value < 0);
 *    SET_ATTRIBUTE(sftol, value <= 0 || value >= 1);
 *    SET_ATTRIBUTE(sgtol, value <= 0 || value >= 1);
 *    SET_ATTRIBUTE(sxtol, value <= 0 || value >= 1);
 *    SET_ATTRIBUTE(delta, value < 0);
 *    SET_ATTRIBUTE(epsilon, value < 0);
 *    # undef SET_ATTRIBUTE
 *
 *    task = OPL_TASK_FG;
 *    for (;;) {
 *      if (task == OPL_TASK_FG) {
 *        opl_bounds_apply(n, x, xmin, xmax); // aply bound constraints
 *        f = ...;  // evaluate the function at X; store in F
 *        g = ...;  // evaluate the gradient of F at X; store in G
 *        ++eval;
 *      } else if (task == OPL_TASK_FREEVARS) {
 *        // Determine the set of free variables:
 *        isfree = ...;
 *      } else if (task == OPL_TASK_NEWX) {
 *         // New successful step: the approximation X, function F, and
 *         // gradient G, are available for inspection.
 *      } else {
 *        // Convergence, or error, or warning
 *        fprintf(stderr, "%s\n", csave);
 *        break;
 *      }
 *      task = opl_vmlmb_iterate(ws, x, &f, g, isfree, NULL);
 *    }
 *
 *
 * HISTORY:
 *   MINPACK-2 Project. April 1995.
 *   Argonne National Laboratory and University of Minnesota.
 *   Brett M. Averick, Richard G. Carter, and Jorge J. Moré.
 *
 *   C-version and improvements (bound constraints, preconditioning, ...).
 *   February 2003 - March 2003.
 *   Observatoire de Lyon.
 *   Éric Thiébaut.
 */

extern opl_task_t
opl_vmlmb_iterate(opl_vmlmb_workspace_t* ws,
                  double x[], double *f, double g[],
                  opl_logical_t isfree[], const double h[]);
/* Set workspace data so that it can be used for a new optimization with
   the same parameters. */
extern opl_task_t
opl_vmlmb_restart(opl_vmlmb_workspace_t* ws);
/* Restore last line search starting point.  Calling this is only effective if
   task is OPL_TASK_FG. */
extern opl_task_t
opl_vmlmb_restore(opl_vmlmb_workspace_t* ws,
                  double x[], double *f, double g[]);
/**
 * Set or unset a strict lower bound for the objective function.
 *
 * VMLMB can use a strict lower bound for the objective function to estimate
 * the initial step length for the first iteration or after a restart.  If
 * `fmin` is a NaN value or a value strictly smaller than `-DBL_MAX`, it is
 * assumed that there is no such bound.  VMLMB exits with a warning if a strict
 * lower bound is set and `f(x) <= fmin`.
 *
 * @param ws      VMLMB workspace.
 *
 * @param fmin    A strict lower bound for the objective function.
 *
 * @return `OPL_SUCCESS` or any other value to indicate the reason of the
 *         failure.
 */
extern opl_status_t
opl_vmlmb_set_fmin(opl_vmlmb_workspace_t* ws, double value);
/**
 * Get the strict lower bound for the objective function.
 *
 * @param ws      VMLMB workspace.
 *
 * @return The current value of the strict lower bound set for the objective
 *         function.  A NaN value is returned if there is no such bound or in
 *         case of error (i.e. `ws` is `NULL`).
 */
extern opl_integer_t
opl_vmlmb_get_n(opl_vmlmb_workspace_t* ws);
extern opl_integer_t
opl_vmlmb_get_m(opl_vmlmb_workspace_t* ws);
extern double
opl_vmlmb_get_fmin(opl_vmlmb_workspace_t* ws);
extern opl_status_t
opl_vmlmb_set_fatol(opl_vmlmb_workspace_t* ws, double value);
extern opl_status_t
opl_vmlmb_set_frtol(opl_vmlmb_workspace_t* ws, double value);
extern opl_status_t
opl_vmlmb_set_delta(opl_vmlmb_workspace_t* ws, double value);
extern opl_status_t
opl_vmlmb_set_epsilon(opl_vmlmb_workspace_t* ws, double value);
extern opl_status_t
opl_vmlmb_set_sxtol(opl_vmlmb_workspace_t* ws, double value);
extern opl_status_t
opl_vmlmb_set_sftol(opl_vmlmb_workspace_t* ws, double value);
extern opl_status_t
opl_vmlmb_set_sgtol(opl_vmlmb_workspace_t* ws, double value);
extern opl_task_t opl_vmlmb_get_task(opl_vmlmb_workspace_t* ws);
extern opl_status_t opl_vmlmb_get_status(opl_vmlmb_workspace_t* ws);
extern const char* opl_vmlmb_get_reason(opl_vmlmb_workspace_t* ws);
extern double opl_vmlmb_get_sftol(opl_vmlmb_workspace_t* ws);
extern double opl_vmlmb_get_sgtol(opl_vmlmb_workspace_t* ws);
extern double opl_vmlmb_get_sxtol(opl_vmlmb_workspace_t* ws);
extern double opl_vmlmb_get_frtol(opl_vmlmb_workspace_t* ws);
extern double opl_vmlmb_get_fatol(opl_vmlmb_workspace_t* ws);
extern double opl_vmlmb_get_epsilon(opl_vmlmb_workspace_t* ws);
extern double opl_vmlmb_get_delta(opl_vmlmb_workspace_t* ws);
extern double opl_vmlmb_get_step(opl_vmlmb_workspace_t* ws);
extern double opl_vmlmb_get_gnorm(opl_vmlmb_workspace_t* ws);
extern opl_integer_t opl_vmlmb_get_evaluations(opl_vmlmb_workspace_t* ws);
extern opl_integer_t opl_vmlmb_get_iterations(opl_vmlmb_workspace_t* ws);
extern opl_integer_t opl_vmlmb_get_restarts(opl_vmlmb_workspace_t* ws);